# grce-sdk

./: .env.example  .gitignore  Cargo.toml  README.md  build-local.sh  package.json  websocket-demo.html
.github/workflows/: release.yml
src/: lib.rs
src/core/: mod.rs
src/core/api_key_validation/: api_key_validation_model.rs  mod.rs
src/core/grace_chat_config/: grace_chat_config_model.rs  mod.rs
src/core/grace_chat_element/: grace_chat_element_model.rs  mod.rs
src/core/websocket/: websocket_manager.rs
web/: index.html
web/js/: grace-chat-element.js  grace-chat-loader.js
web/styles/: chat.css
