[package]
name = "grace-sdk"
version = "0.0.10"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "Window",
  "CustomElementRegistry",
  "CssStyleSheet",
  "CssStyleDeclaration",
  "HtmlStyleElement",
  "Response",
  "Request",
  "RequestInit",
  "RequestMode",
  "Headers",
  "AbortController",
  "AbortSignal",
  "Event",
  "DomTokenList",
  "HtmlHeadElement",
]
